--- a/css/css.css
+++ b/css/css.css
@@ -17,7 +17,8 @@
     border: 1px solid rgb(218, 218, 218);
 }
 pre {
-    outline: 1px solid #ccc; padding: 5px; margin: 5px;
+    outline: 1px solid #e0e0ff;
+    padding: 5px; margin: 5px;
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
