--- a/css/css.css
+++ b/css/css.css
@@ -10,7 +10,7 @@
 }
 
 .formUrl {
-    margin-top: 30px;
+    margin-top: 22px;
     border-radius: 5px;
     padding: 10px;
     background-color: rgb(244 244 244);
@@ -99,13 +99,13 @@ textarea {
 }
 .box {
     border-radius: 5px;
-    border: 1px solid rgba(212, 212, 212, 0);
+    /*border: 1px solid rgba(212, 212, 212, 0);*/
     background: #f5f5f5;
     padding: 10px;
     margin: 0 5px;
     cursor: pointer;
     position: relative;
-    height: 70%;
+    height: 65px;
 }
 .btn_box_close .item i {
     margin-right: 5px !important;
@@ -121,8 +121,8 @@ textarea {
     font-family: 'Inter','Nokora', sans-serif;
 }
 .active_select {
-    background-color: #dfe8ff;
-    border: 1px solid rgb(123, 180, 255);
+    /*background-color: #dfe8ff !important;*/
+    border-left: 5px solid rgb(123, 180, 255);
 }
 .btn_box_close{
     position: absolute !important;
