--- a/css/css.css
+++ b/css/css.css
@@ -171,6 +171,11 @@ textarea {
     resize: none;
 }
 
+
+#btn_plus, #btn_minus{
+    cursor: pointer;
+}
+
 #timer, #lyric {
     background-color: #fffffff5;
 }
