--- a/components/text_compare/txt.html
+++ b/components/text_compare/txt.html
@@ -61,9 +61,9 @@
                         <option value="text/x-sql">SQL</option>
                         
                     </select>
-                    <label for="" class="pl_20 text_color" id="diff_info">Diff count : 0</label>
-                    <label for="" class="pl_20 text_color" id="diff_red">Red : 0</label>
-                    <label for="" class="pl_20 text_color" id="diff_blue">Green : 0</label>
+                    <label class="pl_20 text_color" id="diff_info">Diff count : 0</label>
+                    <label class="pl_20 text_color" id="diff_red">Red : 0</label>
+                    <label class="pl_20 text_color" id="diff_blue">Green : 0</label>
                 </div>
                 
             </div>
