--- a/components/decode/decode.css
+++ b/components/decode/decode.css
@@ -94,16 +94,16 @@
 }
 
 .theme-blue .active_select {
-    border-left: 5px solid var(--blue);
+    border: 1px solid var(--blue);
 }
 .theme-teal .active_select {
-    border-left: 5px solid var(--teal);
+    border: 1px solid var(--teal);
 }
 .theme-green .active_select {
-    border-left: 5px solid var(--green);
+    border: 1px solid var(--green);
 }
 .theme-red .active_select {
-    border-left: 5px solid var(--red);
+    border: 1px solid var(--red);
 }
 
 .ui-widget-content pre {
@@ -140,7 +140,7 @@
 
 .box {
     border-radius: 5px;
-    /*border: 1px solid rgba(212, 212, 212, 0);*/
+    border: 1px solid transparent;
     background: #f5f5f5;
     margin: 0 5px;
     cursor: pointer;
