--- a/components/decode/decode.css
+++ b/components/decode/decode.css
@@ -161,6 +161,7 @@
     margin: 0;
     min-width: 115px;
     font-family: 'Inter','Nokora', sans-serif;
+    width: max-content;
 }
 .btn_box_close{
     position: absolute !important;
