--- a/components/decode/decode.css
+++ b/components/decode/decode.css
@@ -134,11 +134,11 @@
 }
 
 
-#layout .CodeMirror, #table-container2, #table-container{
+ #layout .CodeMirror, #table-container2, #table-container{
     height: calc(100vh - 280px)
 }
 
-.box {
+#layout .box {
     border-radius: 5px;
     border: 1px solid transparent;
     background: #f5f5f5;
