--- a/components/html_2_js/html_2_js.html
+++ b/components/html_2_js/html_2_js.html
@@ -1,7 +1,7 @@
 <div id="layout2">
     <div id="left_part">
         <div class="body">
-            <h3>HTML to JavaScript</h3>
+            <h3 class="text_fixed_color">HTML to JavaScript</h3>
             <form class="ui form small">
                 <div class="field">
                     <label class="text_fixed_color">Variable Name</label>
