--- a/components/html_2_js/html_2_js.css
+++ b/components/html_2_js/html_2_js.css
@@ -79,3 +79,9 @@
 .theme-light.theme-red #html_2_js #layout2 .CodeMirror-focused {
     border: 1px solid var(--light-red) !important;
 }
+.dark1 #html_2_js #layout2 .CodeMirror-focused {
+    border: 1px solid rgb(167, 167, 167) !important;
+}
+.dark2 #html_2_js #layout2 .CodeMirror-focused {
+    border: 1px solid orange !important;
+}
