--- a/components/decode/decode.css
+++ b/components/decode/decode.css
@@ -136,7 +136,7 @@
     border: 1px solid var(--light-red) !important;
 }
 .dark1 .layout .CodeMirror-focused {
-    border: 1px solid rgb(167, 167, 167) !important;
+    /* border: 1px solid rgb(167, 167, 167) !important; */
 }
 .dark2 .layout .CodeMirror-focused {
     border: 1px solid orange !important;
