--- a/components/text_compare/text_compare.css
+++ b/components/text_compare/text_compare.css
@@ -22,7 +22,7 @@
     border: 1px solid var(--light-red) !important;
 }
 .dark1 #text_compare .CodeMirror-focused {
-    border: 1px solid rgb(167, 167, 167) !important;
+    /* border: 1px solid rgb(167, 167, 167) !important; */
 }
 .dark2 #text_compare .CodeMirror-focused {
     border: 1px solid orange !important;
