--- a/components/decode/decode.css
+++ b/components/decode/decode.css
@@ -110,6 +110,11 @@
     border: 1px solid var(--white) !important;
 }
 
+.dark3 .active_select {
+    border: 1px solid white !important;
+}
+
+
 .dark2 .active_select {
     border: 1px solid orange !important;
 }
@@ -135,9 +140,9 @@
 .theme-light.theme-red .layout .CodeMirror-focused {
     border: 1px solid var(--light-red) !important;
 }
-.dark1 .layout .CodeMirror-focused {
-    /* border: 1px solid rgb(167, 167, 167) !important; */
-}
+/* .dark3 .layout .CodeMirror-focused {
+    border: 1px solid white !important;
+} */
 .dark2 .layout .CodeMirror-focused {
     border: 1px solid orange !important;
 }
