--- a/css/theme-dark3.css
+++ b/css/theme-dark3.css
@@ -39,7 +39,7 @@ body.dark3 {
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #ffa470 100%) !important;
 }
 
-.dark3 .btn_color_light {
+.dark3 .btn_color_light, .dark3 .ui.button.icon {
     background-image: linear-gradient(43deg, #7a5ff1  51%, #7d45b2  100%);
     color: white;
 }
@@ -93,10 +93,22 @@ body.dark3 {
 }
 
 .dark3 label {
-    color: #c0c0c0 !important;
+    color: #ffffff !important;
 }
 
 
 .dark3 i {
     color: white;
+}
+
+.dark3 #setting_box label {
+    color: #7d45b2 !important;
+}
+
+.dark3 #md_type .text {
+    color: white !important;
+}
+
+.dark3 .text {
+    color: #7d45b2;
 }
