--- a/css/theme-dark3.css
+++ b/css/theme-dark3.css
@@ -113,7 +113,7 @@ body.dark3 {
     color: #7d45b2;
 }
 
-.dark3 .cm-string .cm-property {
+.dark3 .cm-s-material-ocean .cm-property {
     color: white !important;
 }
 
