--- a/components/subtitle/subtitle.html
+++ b/components/subtitle/subtitle.html
@@ -65,7 +65,7 @@
 
         <div class="field" style="padding-top: 10px;">
             <button class="ui button btn_color" id="btn_save">Save</button>
-            <button type="reset" class="ui button mini right floated" id="btn_clear">Clear</button>
+            <button type="reset" class="ui button mini right floated btn_color_light" id="btn_clear">Clear</button>
         </div>
 
     </form>
