--- a/css/theme-dark4.css
+++ b/css/theme-dark4.css
@@ -2,7 +2,7 @@
     --gr-border: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #ffa470 100%)
 }
 
-body.dark4 {
+#theme.dark4 {
     background-color: #4158D0 !important;
     background-image: linear-gradient(90deg, #4158D0 0%, #C850C0 46%, #ffa470 100%) !important;
 }
