--- a/components/html_2_js/html_2_js.html
+++ b/components/html_2_js/html_2_js.html
@@ -19,7 +19,13 @@
                 </div>
 
                 <div class="field">
-                    <label class="text_fixed_color">Past HTML here</label>
+                    <div style="display: flex; justify-content: space-between;  margin-bottom: 5px">
+                        <label class="text_fixed_color">Past HTML here</label> 
+                        <div>
+                            <button type="button" class="ui button btn_color_light tiny" id="btn_html2js_paste">Paste</button>
+                            <button type="button" class="ui button btn_color_light tiny" id="btn_html2js_format">Format</button>
+                        </div>
+                    </div>
                     <textarea rows="3" id="raw_html"></textarea>
                 </div>
 
@@ -29,51 +35,54 @@
     <div id="right_part">
         <div class="ui form small">
             <div class="field">
-                <label>Result
-                    <div class="ui icon top left pointing dropdown">
-                        <i class="cog icon"></i>
-                        <div class="menu" id="setting_box">
-                            <div class="header">Settings</div>
-                            <div class="item">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" id="is_show_vari">
-                                    <label>Show Variable Declaration</label>
+                <div style="display: flex; justify-content: space-between; margin-bottom: 5px">
+                    <label>Result
+                        <div class="ui icon top left pointing dropdown">
+                            <i class="cog icon"></i>
+                            <div class="menu" id="setting_box">
+                                <div class="header">Settings</div>
+                                <div class="item">
+                                    <div class="ui checkbox">
+                                        <input type="checkbox" id="is_show_vari">
+                                        <label>Show Variable Declaration</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" id="is_double_q">
-                                    <label>Used double quotes "</label>
+                                <div class="item">
+                                    <div class="ui checkbox">
+                                        <input type="checkbox" id="is_double_q">
+                                        <label>Used double quotes "</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" id="is_double_d">
-                                    <label>Used `</label>
+                                <div class="item">
+                                    <div class="ui checkbox">
+                                        <input type="checkbox" id="is_double_d">
+                                        <label>Used `</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" id="is_remove_whitespace">
-                                    <label>Remove whiteSpace</label>
+                                <div class="item">
+                                    <div class="ui checkbox">
+                                        <input type="checkbox" id="is_remove_whitespace">
+                                        <label>Remove whiteSpace</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" id="is_remove_line">
-                                    <label>Remove empty line</label>
+                                <div class="item">
+                                    <div class="ui checkbox">
+                                        <input type="checkbox" id="is_remove_line">
+                                        <label>Remove empty line</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" id="is_remove_cmd">
-                                    <label>Remove comment</label>
+                                <div class="item">
+                                    <div class="ui checkbox">
+                                        <input type="checkbox" id="is_remove_cmd">
+                                        <label>Remove comment</label>
+                                    </div>
                                 </div>
+    
                             </div>
-
                         </div>
-                    </div>
-                </label>
+                    </label>
+                    <button type="button" class="ui button btn_color_light tiny" id="btn_html2js_copy">Copy</button>
+                </div>
                 <textarea rows="25" id="result_html"></textarea>
             </div>
         </div>
