--- a/components/html_2_js/html_2_js.html
+++ b/components/html_2_js/html_2_js.html
@@ -6,7 +6,7 @@
                 <div class="field">
                     <label class="text_fixed_color">Variable Name</label>
                     <div class="ui left labeled input">
-                        <div class="ui dropdown label btn_color" id="vari_type">
+                        <div class="ui compact selection dropdown label btn_color" id="vari_type">
                             <div class="text" id="type_vari">var</div>
                             <i class="dropdown icon"></i>
                             <div class="menu">
