--- a/components/html_2_js/html_2_js.html
+++ b/components/html_2_js/html_2_js.html
@@ -5,7 +5,7 @@
             <form class="ui form small">
                 <div class="field">
                     <label class="text_fixed_color">Variable Name</label>
-                    <div class="ui left labeled input">
+                    <div class="ui left labeled input icon">
                         <div class="ui compact selection dropdown label btn_color" id="vari_type">
                             <div class="text" id="type_vari">var</div>
                             <i class="dropdown icon"></i>
@@ -14,7 +14,8 @@
                                 <div class="item">let</div>
                             </div>
                         </div>
-                        <input type="text" placeholder="variable name" id="vari_nm">
+                        <input class="input_have_clear" type="text" placeholder="variable name" id="vari_nm">
+                        <i class="close link icon btn_clear_its_input" style="display: none;"></i>
                     </div>
                 </div>
 
